# nixos-on-zfs

./: .gitignore  README.md  default.nix  flake.nix  install-explanation.md  pyproject.toml  run.sh  shell.nix
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: Bug-Report.yaml  Feature-Request.yaml
blog/: 2022-03-09.md  2022-03-10.md  2022-03-24.md  open-zfs-docs-questions.md
bootstrap/: nix-bootstrap-reformat-datasetfix.sh  nix-bootstrap-reformat.sh  nix-bootstrap.sh  output  output-nix-bootstrap-minformatting  output-nosync-nosleep-zpoolexportnotall  output-sync-sleep-zpoolexportall  output-sync-sleep-zpoolexportall2  partition.sh  setup.sh  system-config.sh  system-install.sh
bootstrap/funcs/: disk.sh  math.sh  parts.sh
bootstrap/funcs/test/: test_math.sh
pybootstrap/: __init__.py  bootstrap.py  configure.py  disks.py  install.py  partition.py  prepare.py  pyproject.toml  zfs.py
pybootstrap/files/: grub-config  systemd-boot-config  zfs.nix
pybootstrap/pybootstrap/: bootstrap.py  configure.py  install.py  partition.py  prepare.py
pybootstrap/pybootstrap/files/: systemd-boot-config
pybootstrap/test/: test_disks.py
