[tool.poetry]
name = "pybootstrap"
version = "0.1.0"
description = "A package for bootstrapping NixOS Root on ZFS."
authors = ["Daniel Baker <daniel.baker@tweag.io>"]

[tool.poetry.dependencies]
python = "^3.10"
questionary = "^1.10.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
